110834: "Version Mobile - Safari - iOS - Bug d'affichage fondu au noir décalé "

--- a/altered.css
+++ b/altered.css
@@ -3339,6 +3339,8 @@ html {
     height: calc(var(--boardScale) * 460px);
     width: 100%;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.5) 80%, transparent 100%); }
+    .mobile_version #focus-storm-overlay #focus-storm-top {
+      height: calc(var(--boardScale) * 460px + 134px); }
   #focus-storm-overlay #focus-storm-middle {
     height: calc(var(--boardScale) * 460px);
     width: 100%;
